# catbox-cli

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: album.rs  authentication.rs  cli.rs  errors.rs  main.rs  network.rs  upload.rs  user.rs
