[package]
name = "catbox-cli"
version = "0.1.0"
edition = "2021"
description = "A simple catbox cli that has progress when uploading!"
readme = "./README.md"
homepage = "https://github.com/JustSimplyKyle/catbox-cli"
repository = "https://github.com/JustSimplyKyle/catbox-cli"
categories = [ "cli" ]
license = "MIT"

[[bin]]
name = "cbx"
path = "./src/main.rs"

[dependencies]
tl = "0.7.8"
# tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.9", features = ["native-tls", "rustls-tls-native-roots", "cookies", "multipart", "stream"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "fs"] }
rand = "0.8.5"
snafu = "0.8.5"
color-eyre = "0.6.3"
futures-util = "0.3.31"
tokio-util =  "0.7.12" 
indicatif = "0.17.9"
argh = "0.1.12"
keyring = { version = "3.6.1", features = ["apple-native", "windows-native", "sync-secret-service"] }
